<?xml version="1.0"?>
<package>
  <name>ros_qt_demo</name>
  <version>0.1.0</version>
  <description>

     ros_qt_demo

  </description>
  <maintainer email="xgy@gmail.com">xgy</maintainer>
  <author>xgy</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

<!--  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>

  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>-->
 
</package>
